First working importer

--- a/src/Minerva.Importer/appsettings.json
+++ b/src/Minerva.Importer/appsettings.json
@@ -2,7 +2,8 @@
   "elastic_node_1": "http://localhost:9200/",
   "elastic_node_2": "",
   "elastic_node_3": "",
-  "CVRDirectory":  "",
+  "CVRDirectory": "Imports",
+  "Encoding": "UTF-8",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -22,5 +23,5 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
-  } 
+  }
 }
