--- a/src/Minerva.Importer/Minerva.Importer.csproj
+++ b/src/Minerva.Importer/Minerva.Importer.csproj
@@ -13,7 +13,14 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="appsettings.json" />
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imports\39260414_101094_20161128114236_VIRKSOMHEDER.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration">
@@ -43,6 +50,13 @@
     <PackageReference Include="Serilog.Sinks.Literate">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Seq">
+      <Version>3.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Encoding.CodePages">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
