--- a/src/Minerva/Minerva.csproj
+++ b/src/Minerva/Minerva.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Serilog.Sinks.Literate">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Text.Encoding.CodePages">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
