--- a/src/Minerva/Minerva.csproj
+++ b/src/Minerva/Minerva.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="$(GlobalExclude)" />
     <EmbeddedResource Include="**\*.resx" Exclude="$(GlobalExclude)" />
+    <Folder Include="Utils\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +53,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
       <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="NEST">
+      <Version>2.4.7</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Literate">
       <Version>2.0.0</Version>
