First working version (locally) - missing compose to have elasticsearch

--- a/src/Minerva/appsettings.json
+++ b/src/Minerva/appsettings.json
@@ -1,10 +1,27 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
+  "elastic_node_1": "http://localhost:9200/",
+  "elastic_node_2": "",
+  "elastic_node_3": "",
+  "CVRDirectory": "Imports",
+  "Encoding": "UTF-8",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "LiterateConsole" },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341/",
+          "compact": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
