--- a/src/Minerva/Minerva.csproj
+++ b/src/Minerva/Minerva.csproj
@@ -56,8 +56,20 @@
     <PackageReference Include="NEST">
       <Version>2.4.7</Version>
     </PackageReference>
+    <PackageReference Include="Serilog">
+      <Version>2.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Extensions.Logging">
+      <Version>1.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Settings.Configuration">
+      <Version>2.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Serilog.Sinks.Literate">
       <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Seq">
+      <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Encoding.CodePages">
       <Version>4.3.0</Version>
